--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,7 +1,10 @@
 <div class="profilepic">	
 	<script src="{{ root_url }}/javascripts/md5.js"></script>
 	<script type="text/javascript">
-		document.write("<img alt="Profile Picture" src="/images/avatar.jpg" style="width:160px;">");
+	document.write("<img alt='Profile Picture' src='/images/avatar.jpg' style='width:160px'>");
+	// var img = <img alt='Profile Picture' src='/image/avatar.jpg' style='width:160px'; 
+	// document.write(img);
+		// document.write("<img alt="Profile Picture" src="/images/avatar.jpg" style="width:160px;">");
 	</script>
 </div>
 <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
